--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <style>
+            @font-face {
+                font-family: ITCRonda;
+                src: url("Resources/Fonts/ITC\ Ronda\ Regular.otf") format("opentype");
+            }
+
+            .main {
+                font-family: ITCRonda;
+                background-color: #f26551;
+                color: white;
+                font-size: 8vw;
+                height: 100vh;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
-        <div class="container">
+        <div class="container-fluid main">
             <div class="row">
                 <div class="col">
-                    <h1>@rmijo.com</h1>
+                    <span style="font-size: 10vw;">@</span>RMIJO.COM
                 </div>
             </div>
         </div>
